@@ -33,7 +33,11 @@ const bfd_arch_info_type bfd_s390_64_arch =
     "s390",
     "s390:64-bit",
     3, /* section alignment power */
+#if BFD_DEFAULT_TARGET_SIZE == 64
     TRUE, /* the default */
+#else
+    FALSE, /* the default */
+#endif
     bfd_default_compatible,
     bfd_default_scan,
     bfd_arch_default_fill,
@@ -50,7 +54,11 @@ const bfd_arch_info_type bfd_s390_arch =
     "s390",
     "s390:31-bit",
     3, /* section alignment power */
+#if BFD_DEFAULT_TARGET_SIZE == 64
+    FALSE, /* the default */
+#else
     TRUE, /* the default */
+#endif
     bfd_default_compatible,
     bfd_default_scan,
     bfd_arch_default_fill,
